# shift-maker

./: README.md  eval_shift.py  main.py  main.xlsm  make_table.py  moto.xlsx  pyproject.toml  shift_fix_.py  test.py  utils.py
