[tool.poetry]
name = "shift-maker"
version = "0.1.0"
description = "遺伝的アルゴリズムでシフト自動生成"
authors = ["Kuchiki <ykuchiki0827@gmail.com>"]
readme = "README.md"
packages = [{include = "shift_maker"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
sun = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
